@@ -1,1 +1,0 @@
-SUSPENDED until access to the image is configured in CI/CD
